code-smell-detector/src/app/home/home.component.css
@import '~@fortawesome/fontawesome-free/css/all.min.css';
@import '~bootstrap/dist/css/bootstrap.min.css';

body {
    font-family: Roboto, "Helvetica Neue", sans-serif;
    color: 	#7FFFD4; 
}

.navbar {
    margin-bottom: 20px; 
    font-size: larger;
}

.container {
    text-align: center;
    padding: 20px;
    border-radius: 10px;
}

h2 {
    color: 	#7FFFD4; 
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
}

p {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: larger; 
}

input,
button {
    margin: 5px;
}

button {
    cursor: pointer;
}

.alert-danger {
    margin-top: 50px;
    max-width: 400px; 
    margin-left: auto; 
    margin-right: auto;
    background-color: #dc3545; 
    border-color: #dc3545; 
    color: #fff; 
}

.input-group {
    max-width: 400px;
    margin-left: 115px;
}

table {
    background-color: pink;
}

#scrollableWindow {
    height: 300px;
    overflow: auto;
    border: 1px solid #ccc;
    padding: 10px;
    text-align: left;
    white-space: pre-wrap;
    background-color: #ffffff;
}

pre {
    color: #000; /* Set a standard text color for non-highlighted lines */
}

.highlighted-line {
    background-color: #ffe6e6;
    display: block;
  }
  

